# cccg_app_s3_desktop

./: .gitignore  README.md  S3Desktop.spec  pyproject.toml
.cursor/rules/: docs-reference.mdc
app_s3/: __init__.py  __main__.py  bootstrap.py
app_s3/application/: bucket_service.py  credential_service.py  settings_service.py  sync_service.py  transfer_service.py
app_s3/config/: paths.py
app_s3/domain/: exceptions.py  models.py
app_s3/infrastructure/: credential_store.py  local_fs.py  log_timing.py  s3_repository.py  sync_engine.py
app_s3/ui/: main_window.py  resources.py  theme.py
app_s3/ui/dialogs/: add_bucket_dialog.py  credential_dialog.py  sync_job_dialog.py  unlock_dialog.py
app_s3/ui/models/: s3_browser_model.py  s3_browser_proxy.py
app_s3/ui/widgets/: connection_sidebar.py  loading_overlay.py  s3_browser_widget.py  transfer_panel.py
app_s3/ui/workers/: listing_worker.py  transfer_worker.py
docs/: funcionalidades.md  informacion-tecnica.md
scripts/: generate_app_icon.py  s3desktop_entry.py
tests/unit/: test_credential_store.py  test_settings_service.py  test_sync_engine.py
