[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
app_s3 = ["assets/*"]

[project]
name = "app-s3"
version = "0.1.0"
description = "Cliente de escritorio Windows para S3 con credenciales cifradas y sync"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6",
  "boto3>=1.34",
  "cryptography>=42",
  "argon2-cffi>=23",
  "pydantic>=2",
  "APScheduler>=3.10",
  "platformdirs>=4",
]

[project.scripts]
app-s3 = "app_s3.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-qt>=4",
  "moto[s3]>=5",
  "ruff>=0.4",
  "mypy>=1.10",
  "pyinstaller>=6.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
